@@ -1,3 +1,14 @@
+2010-06-11  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-handler.c (std_handler_input,
+	std_handler_output) [HAVE_W32CE_SYSTEM]: Finish the pipe.  We must
+	do this here, because otherwise assuan_close_input_fd() and
+	assuan_close_output_fd() can't work.
+	* system-w32ce.c (_assuan_w32ce_finish_pipe): Call SetLastError in
+	error case.
+	(__assuan_close): Save WSAGetLastError before trashing it!
+	Otherwise handle is never closed and GPGME hangs.
+
 2010-06-10  Marcus Brinkmann  <marcus@g10code.de>
 
 	* w32ce-add.h (ASSUAN_STDIN, ASSUAN_STDOUT): Define magic handle values.
